--- a/MJML/boardmember-Bruce.html
+++ b/MJML/boardmember-Bruce.html
@@ -112,7 +112,7 @@
                   <tbody>
                     <tr>
                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
-                        <div style="font-family:'Open Sans', 'Raleway', Arial, Verdana, sans-serif;font-size:1px;line-height:1px;text-align:left;color:#ffffff;"><span class="preheader" style="visibility: hidden; mso-hide: all; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; width: 100%; display: none;"> Non Executive Member Board of Director </span></div>
+                        <div style="font-family:'Open Sans', 'Raleway', Arial, Verdana, sans-serif;font-size:1px;line-height:1px;text-align:left;color:#ffffff;"><span class="preheader" style="visibility: hidden; mso-hide: all; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; width: 100%; display: none;"> LEGAL REPRESENATION OPPORTUNITY </span></div>
                       </td>
                     </tr>
                   </tbody>
@@ -136,7 +136,7 @@
                   <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                        <div style="font-family:Open Sans, Arial, sans-serif;font-size:14px;letter-spacing:2px;line-height:26px;text-align:center;text-transform:uppercase;color:#111111;">Non Executive Member Board of Directors</div>
+                        <div style="font-family:Open Sans, Arial, sans-serif;font-size:14px;letter-spacing:2px;line-height:26px;text-align:center;text-transform:uppercase;color:#111111;">Legal Represenation Opportunity</div>
                       </td>
                     </tr>
                   </tbody>
@@ -170,7 +170,7 @@
                                     <tbody>
                                       <tr>
                                         <td style="width:100px;">
-                                          <img alt height="auto" src="https://eqdpi.com/static/logo/l1-mail.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
+                                          <img alt height="auto" src="https://www.eqdpi.com/static/logo/l1-mail.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="100">
                                         </td>
                                       </tr>
                                     </tbody>
@@ -199,22 +199,20 @@
                               <tr>
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:14px;line-height:25px;text-align:left;color:#000000;">
-                                    <p>Dear Mr. Doug Meier,</p>
-                                    <p>I hope you and your family are healthy and well. </p>
-                                    <p> I am a principal in a venture to consolidate the Dental industry. </p>
-                                    <p> We have assembled a world-class Non-Ex Board of Directors, which is augmented with excellent legal and accounting representation. </p>
+                                    <p>Dear Mr. David E. Dahlquist,</p>
+                                    <p> I am a principal and leading a team in a venture to consolidate the Dental industry. </p>
+                                    <p>We have assembled a world-class Non-Ex Board of Directors. Our total transactions experience has ranged in excess of $300 Billion 'ev'. </p>
+                                    <p> We are augmented with excellent legal and accounting representation. ( They offered us 80% discount on broken deals )</p>
                                     <p> Founding Board members are given equity and will never be asked to contribute capital. </p>
                                     <p> Respecting the reputations of our Board members and conducting our business accordingly will be a core operating principle. </p>
-                                    <p>Time commitment: 1 - 3 hours/week, except when we get into an acquisition, all bets are off. </p>
+                                    <p>Time commitment: 1 - 5 hours/week, except when we get into an acquisition, all bets are off. </p>
                                     <p>The intent is to guide the ship, not to actually row the boat. </p>
                                     <p>It appears with your background, this might be a potential fit and worth discussing.</p>
-                                    <p>If you agree, please use the following link to schedule a time for a quick chat, and I will send you a pdf with additional information about the venture. </p>
+                                    <p> I do not know if your current work would pose a conflict, but if not, I would welcome having a discussion. </p>
+                                    <p> If you have an interest in learning more, please use the following link to schedule a time for a quick chat, and I will send you a pdf with additional information about the venture. </p>
                                     <p>https://calendly.com/equitydental/mnap</p>
                                     <p>On the call, I’ll explain our plan, which will help you make an informed choice on whether we might be a fit. </p>
-                                    <p>PS. 2 national law firms proposed to work with us on a success fee basis i.e 90% discount on broken deals. </p>
-                                    <p>We have rejected several deals and we interview a new seller every week. </p>
-                                    <p>Current board members: https://eqdpi.com/cb9/ </p>
-                                    <p>Thank you for taking the time to read my message. </p>
+                                    <p> Thank you for taking the time to read my message. </p>
                                   </div>
                                 </td>
                               </tr>
@@ -241,10 +239,9 @@
                                 <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                   <div style="font-family:Raleway;font-size:13px;line-height:8px;text-align:left;color:#000000;">
                                     <p>Best regards, </p>
-                                    <p>Jay Parteek | Principal | EquityDentalPartners</p>
-                                    <p>Web: Eqdpi.com </p>
+                                    <p>Jay Parteek </p>
+                                    <p>Principal | EquitydentalPartners </p>
                                     <p>Linkedin: www.linkedin.com/in/jayeqd </p>
-                                    <p>Email- Jay@eqdpi.com </p>
                                     <a href="(714)-606-7884" style="color: #111111;">C-(714)-606-7884</a>
                                   </div>
                                 </td>
@@ -368,13 +365,15 @@
                           <p style="Margin:0; padding-bottom:10px; font-size:10px; line-height:15px; Margin-bottom:10px; color:#111111; font-family: 'Open Sans', 'Raleway', Arial, Helvetica, sans-serif;">
                             <span style="color:#111111 !important; text-decoration:none;">
                               <strong>1.714.606.7884</strong>
-                              <br> 1002 N Sacramento St, Orange, CA 92867 </span>
+                              <!-- <br /> 1002 N Sacramento St, Orange, CA 92867 -->
+                            </span>
                             <br>
-                            <a href="https://eqdpi.com/cb9" name="footer_privacy" style="color:#111111;">
-                              <strong>Current Board</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
+                            <!-- <a href="https://eqdpi.com/cb" name="footer_privacy" style="color:#111111;">
+              <strong>Current Board</strong>
+            </a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
+                            <a href="http://www.eqdpi.com" name="footer_privacy" style="color:#111111;">
                               <strong>About Us</strong>
-                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/partnership" style="color:#111111;">
+                            </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="https://eqdpi.com/partnershipform/" style="color:#111111;">
                               <strong>Partnership</strong>
                             </a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.eqdpi.com/solutions" style="color:#111111;">
                               <strong>Solutions</strong>
